--- a/conf/payloads/cargo_forge.yaml
+++ b/conf/payloads/cargo_forge.yaml
@@ -1,22 +1,22 @@
 defaults:
   - cargo:
-#    - negeuler1 # needed
+    - negeuler1 # needed
     - negeuler2 # needed
 #    - negeuler3
 #    - negeuler4
-#    - noob5 # needed
-#    - noob6 # needed
+    - noob5 # needed
+    - noob6 # needed
 #    - negeuler5
 #    - negeuler6
 #    - negeuler7
-#    - negeuler8 # needed
-#    - noob1 # needed
-#    - noob7 # needed
-#    - noob2 # needed
-#    - noob3 # needed
-#    - noob8 # needed
-    - noob9
-    - noob10
+    - negeuler8 # needed
+    - noob1 # needed
+    - noob7 # needed
+    - noob2 # needed
+    - noob3 # needed
+    - noob8 # needed
+#    - noob9 # hires
+#    - noob10 # hires
 
 score_weight: 1.0
 
